sfdx-source/force-app/main/default/objects/Initiative__c/Initiative__c.object-meta.xml
<CustomObject>
    <description>LEM-596,LEM-14667: Initiative object to capture the various initiatives taken against a Mx (Business Account).Renamed to Mx Touchpoint.</description>
    <label>Mx Touchpoint</label>
    <nameField>
        <label>Summary</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mx Touchpoints</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>