sfdx-source/force-app/main/default/objects/Initiative__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM 596: Relationship to Account on Initiative record</description>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Account selected is not a Business Account. Please select an associated Business Account to save the Initiative.</errorMessage>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Business</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Initiatives</relationshipLabel>
    <relationshipName>Initiatives</relationshipName>
    <type>Lookup</type>
</CustomField>