sfdx-source/force-app/main/default/objects/Initiative__c/fields/Account_Segment__c.field-meta.xml
<CustomField>
    <fullName>Account_Segment__c</fullName>
    <description>LEM-14728: It is used to populate the Account&apos;s Segment value.</description>
    <complianceGroup>GDPR</complianceGroup>
    <formula>TEXT(Account__r.Segment__c)</formula>
    <label>Account Segment</label>
    <type>Text</type>
</CustomField>