sfdx-source/force-app/main/default/objects/Initiative__c/fields/Campaign_Member_Id__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member_Id__c</fullName>
    <description>LEM-1595: Captures the Id of the Campaign Member to link the Account for which the Initiative has been created.</description>
    <label>Campaign Member Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>