sfdx-source/force-app/main/default/objects/Initiative__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>LEM-719: This field is used to captures the comments, reasons for MX sentiment on Initiative.</description>
    <inlineHelpText>Captures comments, reason for Mx sentiment, etc.</inlineHelpText>
    <label>Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>