sfdx-source/force-app/main/default/objects/Initiative__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>LEM-596: Provides the expected End Date of the Initiative</description>
    <inlineHelpText>The expected end date of the touchpoint.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>