sfdx-source/force-app/main/default/objects/Initiative__c/fields/Interaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Type__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-14667: It stores the interaction type of touchpoint.</description>
    <inlineHelpText>Indicates the type of interaction.</inlineHelpText>
    <label>Interaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>In Person</fullName>
            </value>
            <value>
                <fullName>Phone Call</fullName>
            </value>
            <value>
                <fullName>Zoom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>