sfdx-source/force-app/main/default/objects/Initiative__c/fields/Is_Parent_Account_Merged__c.field-meta.xml
<CustomField>
    <fullName>Is_Parent_Account_Merged__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-3644: It is used to identify whether an Initiative is updated from Active Prime account merge process.</description>
    <label>Is Parent Account Merged</label>
    <type>Checkbox</type>
</CustomField>