sfdx-source/force-app/main/default/objects/Initiative__c/fields/Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ID__c</fullName>
    <description>LEM-15276: It is used to maintain the figment Id of Initiative.</description>
    <externalId>true</externalId>
    <label>Legacy ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>