sfdx-source/force-app/main/default/objects/Initiative__c/fields/Mx_Sentiment_Score__c.field-meta.xml
<CustomField>
    <fullName>Mx_Sentiment_Score__c</fullName>
    <description>LEM-1596: Used to store the Overall_Mx_Sentiment values Numerical numbers</description>
    <formula>CASE(
  TEXT(Overall_Mx_Sentiment__c),
  &quot;1 - Very Unsatisfied&quot;, 1,
  &quot;2 - Unsatisfied&quot;, 2,
  &quot;3 - Neutral&quot;, 3,
  &quot;4 - Satisfied&quot;, 4,
  &quot;5 - Very Satisfied&quot;, 5,
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mx Sentiment Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>