sfdx-source/force-app/main/default/objects/Initiative__c/fields/Other_Partnership_Priority__c.field-meta.xml
<CustomField>
    <fullName>Other_Partnership_Priority__c</fullName>
    <description>LEM-596: Text field to highlight exceptional Partnership Priorities</description>
    <label>Other Partnership Priority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>