sfdx-source/force-app/main/default/objects/Initiative__c/fields/Overall_Mx_Sentiment__c.field-meta.xml
<CustomField>
    <fullName>Overall_Mx_Sentiment__c</fullName>
    <description>LEM-596: Captures the Overall Mx Sentiment on the Initiative</description>
    <inlineHelpText>Indicates the overall sentiment the Mx has at the time of the touchpoint.</inlineHelpText>
    <label>Overall Mx Sentiment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Very Unsatisfied</fullName>
            </value>
            <value>
                <fullName>2 - Unsatisfied</fullName>
            </value>
            <value>
                <fullName>3 - Neutral</fullName>
            </value>
            <value>
                <fullName>4 - Satisfied</fullName>
            </value>
            <value>
                <fullName>5 - Very Satisfied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>