sfdx-source/force-app/main/default/objects/Initiative__c/fields/Partnership_Priorities__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Priorities__c</fullName>
    <description>LEM-596: Captures the various partnership priorities for the given Initiative</description>
    <label>Partnership Priorities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Volume</fullName>
            </value>
            <value>
                <fullName>Ads</fullName>
            </value>
            <value>
                <fullName>Promos</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>