sfdx-source/force-app/main/default/objects/Initiative__c/fields/Reason_for_Disinterest__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Disinterest__c</fullName>
    <description>LEM-1596: This field is to capture the reason for disinterest when the response is Mx Uninterested for No further action necessary.</description>
    <label>Reason for Disinterest</label>
    <length>100</length>
    <type>Text</type>
</CustomField>