sfdx-source/force-app/main/default/objects/Initiative__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <description>LEM-1596: Captures the values of Merchant interest or response after the discussion.</description>
    <inlineHelpText>Indicates the Merchant response / interest following the discussion.</inlineHelpText>
    <label>Response</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mx Uninterested - No further action necessary</fullName>
            </value>
            <value>
                <fullName>Mx Receptive - No further action necessary</fullName>
            </value>
            <value>
                <fullName>Mx Receptive - Implementation required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>