sfdx-source/force-app/main/default/objects/Initiative__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>LEM-596: Captures the start date of the Initiative</description>
    <inlineHelpText>The date the touchpoint was held or that the touchpoint was kicked off.</inlineHelpText>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>