sfdx-source/force-app/main/default/objects/Initiative__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>LEM-596: This field indicates the Initiative picklist Type</description>
    <inlineHelpText>Indicates the type of touchpoint being held.</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Review</fullName>
            </value>
            <value>
                <fullName>Strategic Effort</fullName>
            </value>
            <value>
                <fullName>Churn / Retention</fullName>
            </value>
            <value>
                <fullName>Pilot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>