sfdx-source/force-app/main/default/objects/Initiative__c/fields/Ultimate_Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Parent_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-598: Lookup to the Ultimate Parent Account of the original Parent of the Initiative.</description>
    <label>Ultimate Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Hierarchy Initiatives</relationshipLabel>
    <relationshipName>Hierarchy_Initiatives</relationshipName>
    <type>Lookup</type>
</CustomField>