sfdx-source/force-app/main/default/objects/Initiative__c/validationRules/Validate_Account_on_Initiative.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Account_on_Initiative</fullName>
    <active>true</active>
    <description>LEM-1630: This validation rule is to validate the Account field on Initiative record.</description>
    <errorConditionFormula>AND(
      NOT($Permission.Bypass_Initiative_Validation_Rules),
      ISBLANK(Account__c)
    )</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>Please ensure that there is an Account associated with this Initiative before saving.</errorMessage>
</ValidationRule>