sfdx-source/force-app/main/default/objects/Initiative__c/listViews/My_Completed_Initiatives.listView-meta.xml
<ListView>
    <fullName>My_Completed_Initiatives</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Overall_Mx_Sentiment__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>My Completed Initiatives</label>
</ListView>